feat(stack): add stack implementation with tests and build support

--- a/cprimer/Makefile
+++ b/cprimer/Makefile
@@ -15,7 +15,7 @@ else
 endif
 
 # Targets
-TARGETS = bin/test_array bin/test_single_linked_list bin/test_queue bin/test_string
+TARGETS = bin/test_array bin/test_single_linked_list bin/test_queue bin/test_string bin/test_stack
 
 # Default target
 all: $(TARGETS)
@@ -40,6 +40,11 @@ bin/test_string: tests/test_string.c src/string.c lib/unity/unity.c
 	@echo "Building test_string..."
 	$(CC) $(CFLAGS) -D_Noreturn= $^ -o $@
 
+# Test stack with Unity framework
+bin/test_stack: tests/test_stack.c src/array.c src/stack.c lib/unity/unity.c
+	@echo "Building test_stack..."
+	$(CC) $(CFLAGS) -D_Noreturn= $^ -o $@
+
 # Run tests
 test: all
 	@echo "Running tests..."
@@ -47,6 +52,7 @@ test: all
 	@if [ -f bin/test_single_linked_list ]; then echo "=== Running test_single_linked_list ==="; ./bin/test_single_linked_list; fi
 	@if [ -f bin/test_queue ]; then echo "=== Running test_queue ==="; ./bin/test_queue; fi
 	@if [ -f bin/test_string ]; then echo "=== Running test_string ==="; ./bin/test_string; fi
+	@if [ -f bin/test_stack ]; then echo "=== Running test_stack ==="; ./bin/test_stack; fi
 
 # Clean build artifacts
 clean:
